--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       >
         <div class="profiles flex flex-col items-center">
           <img
+          width="100"
             class="rounded-full w-[5rem]"
             src="assets/img/profiles.png"
             alt="isidore"
@@ -84,8 +85,8 @@
           <div class="dashboard-anlystics border w-[95%] mt-5">
             <h3>Network analytics</h3>
             <div class="home-dashboard h-[10rem] w-full visitors-analytics">
-              <div class="w-full h-[10rem]">
-                <canvas class="max-h-[10rem]" id="visitors"></canvas>
+              <div class="w-full h-[10rem]" id="visitors">
+                <!-- <canvas class="max-h-[10rem]" ></canvas> -->
               </div>
             </div>
           </div>
@@ -149,8 +150,8 @@
               <div
                 class="content-Devices flex justify-around items-center gap-2"
               >
-                <div class="bonhut max-w-[50%]">
-                  <canvas class="max-h-[8rem]" id="Device"></d>
+                <div class="bonhut max-w-[50%] w-[10rem] h-[10rem]" id="Device">
+                  <!-- <canvas class="max-h-[8rem]" id="Device"></d> -->
                 </div>
                 <div class="data-details w-[48%]">
                   <div
@@ -201,69 +202,8 @@
                     Rem quis voluptatum delectus assumenda ea recusandae
                   </p>
                 </div>
-                <div class="calendar w-[60%]">
-                  <div class="grid grid-cols-12">
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                    <div class="border h-[2rem] col-span-1 bg-gray-500"></div>
-                  </div>
+                <div class="calendar w-[60%]" id="calendar">
+                  
                 </div>
               </div>
             </div>
@@ -484,12 +424,14 @@
                   />
                 </div>
               </div>
-              
+              <div class="btn-actions flex justify-between"></div>
             </div>
           </div>
         </section>
       </main>
     </div>
+    <script src="chartsperfrmana.ts"></script>
+    <script src="chart.ts"></script>
     <script type="module" src="index.ts"></script>
   </body>
 </html>
